--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,10 @@ theme: minima
 plugins:
   - jekyll-feed
 
+# Set the Sass partials directory, as we're using @imports
+sass:
+  style: :expanded # You might prefer to minify using :compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
