--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ _site
 .sass-cache
 .jekyll-metadata
 rakefile
+/node_modules
+/.env
+
+/newrelic_agent.log
+
+# Should ignore code coverage reports
+
+/coverage
+
+# There shouldn't every be an SQL-file committed, but for debugging purposes they may be handy
+
+*.sql
+
+# Left for historic reason, was used by an old removed migration system
+# Will eventually also be removed
+
+/database.json
