--- a/_config.yml
+++ b/_config.yml
@@ -48,4 +48,4 @@ sass:
 #   - vendor/ruby/
 exclude: [node_modules, gulpfile.js]
 include: [.well-known]
-destination: _newsite3
+# destination: _newsite3
