--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: My microblog
 email: frank@github.com
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/microblog" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:
