--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: frankmeeuwsen
 
 avatar: /images/dtd-avatar.png
 webmentions:
-  username: 87fe75ab.ngrok.io
+  username: ecstatic-jang-1b098a.netlify.com
 # Build settings
 markdown: kramdown
 theme: minima
