--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: frankmeeuwsen
 
 avatar: /images/dtd-avatar.png
 webmentions:
-  username: ecstatic-jang-1b098a.netlify.com
+  username: new.diggingtgedigital.com
 # Build settings
 markdown: kramdown
 #theme: minima
