--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username: frankmeeuwsen
 
 avatar: /images/dtd-avatar.png
 webmentions:
-  username: new.diggingtgedigital.com
+  username: new.diggingthedigital.com
 # Build settings
 markdown: kramdown
 #theme: minima
