--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: My microblog
 email: frank@github.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://new.diggingthedigital.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: frankmeeuwsen
 github_username: frankmeeuwsen
 
